--- a/test/fixtures/genres.yml
+++ b/test/fixtures/genres.yml
@@ -1,11 +1,5 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+genre1:
+  genre_name: "Rock"
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+genre2:
+  genre_name: "Pop"
