--- a/test/fixtures/songs.yml
+++ b/test/fixtures/songs.yml
@@ -1,11 +1,7 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+song1:
+  title: "Mercy"
+  duration: 3
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+song2:
+  title: "Shake It Off"
+  duration: 4
